--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "@popperjs/core": "^2.11.6",
     "angular-font-awesome": "^3.1.2",
+    "apexcharts": "^3.44.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "font-awesome": "^4.7.0",
